--- a/portfolio/app/modules/userDefined/projects/projects.module.css
+++ b/portfolio/app/modules/userDefined/projects/projects.module.css
@@ -1,9 +1,9 @@
 .main{
+  /* background-color: aliceblue; */
   position: relative;
-  margin-top: 50vh;
+  /* margin-top: 50vh; */
 }
 .projectHead{
-  
  display: flex;
   justify-content: center;
   align-items: center;
